# QuanLiTiemSuaXe

./: CMakeLists.txt  README.md  main.c
database/: bills.txt  customers.txt  services.txt
model/: model_central.h
modules/: billing.c  billing.h  customers.c  customers.h  services.c  services.h
ui/: components.c  components.h  index.c  index.h  ui.h
ui/components/: box.c  box.h  button.c  button.h  grid.c  grid.h  label.c  label.h  notebook.c  notebook.h  page.c  page.h  scrolled.c  scrolled.h  search.c  search.h  treeView.c  treeView.h
ui/pages/: customer.c  customer.h  index.c  payment.c  payment.h  service.c  service.h  statistical.c  statistical.h
ui/utils/: freeMemory.c  freeMemory.h  get_iter_of_search.c  get_iter_of_search.h  get_last_iter.c  get_last_iter.h  listStore.c  listStore.h  search_in_model.c  search_in_model.h  update_txt.c  update_txt.h  update_txt_bil.c  update_txt_bil.h  update_txt_ser.c  update_txt_ser.h
